# lib-w3c-widgets

./: Makefile.in  aclocal.m4  configure  configure.ac
src/: IAccessEntity.vala  IAuthorEntity.vala  IContentEntity.vala  IDescriptionEntity.vala  IElement.vala  IFeatureEntity.vala  IIconEntity.vala  ILicenseEntity.vala  ILocalizedElement.vala  ILocalizedEntity.vala  INameEntity.vala  IParamEntity.vala  IPreferenceEntity.vala  IStartPageProcessor.vala  IW3CXMLConfiguration.vala  Makefile.am  Makefile.in  W3CWidget.vala  W3CWidgetFactory.vala  source_files  {}
src/exceptions/: BadManifestException.vala  BadWidgetZipFileException.vala  InvalidContentTypeException.vala  InvalidStartFileException.vala
src/exceptions/.svn/: all-wcprops  entries
src/impl/: AbstractLocalizedEntity.vala  AccessEntity.vala  AuthorEntity.vala  ContentEntity.vala  DescriptionEntity.vala  FeatureEntity.vala  IconEntity.vala  LicenseEntity.vala  NameEntity.vala  ParamEntity.vala  PreferenceEntity.vala  WidgetManifestModel.vala
src/impl/.svn/: all-wcprops  entries
src/updates/: InvalidUDDException.vala  UpdateDescription.vala  UpdateDescriptionDocument.vala
src/updates/.svn/: all-wcprops  entries
src/util/: Arrays.vala  ContentTypeUtils.vala  FileStreamDecorator.vala  FormattingUtils.vala  IRIValidator.vala  LocalizationUtils.vala  NumberUtils.vala  RandomGUID.vala  UnicodeUtils.vala  WidgetOutputter.vala  WidgetPackageUtils.vala  libuuid.vapi  libwrapuuid.vala  uuid.vapi
src/util/.svn/: all-wcprops  entries
test/: Makefile  Makefile.am  Makefile.in  clock.wgt  helloauto.wgt  w3c_widgets_test.vala
